Copyright © 2009 CNRS
Copyright © 2009-2023 Inria.  All rights reserved.
Copyright © 2009-2013 Université Bordeaux
Copyright © 2009-2011 Cisco Systems, Inc.  All rights reserved.
Copyright © 2020 Hewlett Packard Enterprise.  All rights reserved.

$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.10.1
--------------
* Get Intel GPU OpenCL device locality.
* Add bandwidths between subdevices in the LevelZero XeLinkBandwidth
  matrix.
* Fix CUDA/OpenCL test source path in Windows CMake.
* Add section "Compiling software on top of hwloc's C API" in the
  documentation with examples for GNU Make and CMake,
  thanks to Florent Pruvost for the help.


Version 2.10.0
--------------
* Heterogeneous Memory core improvements
  + Better heuristics to identify the subtype of memory such as HBM,
    DRAM, NVM, CXL-DRAM, etc.
  + Build memory tiers, i.e. sets of NUMA nodes with the same subtype
    and similar performance.
    - NUMA node tier ranks are exposed in the new MemoryTier info
      attribute (starts from 0 for highest bandwidth tier)..
  + See the new Heterogeneous Memory section in the documentation.
* API
  + Add hwloc_topology_free_group_object() to discard a Group created
    by hwloc_topology_alloc_group_object().
* Linux backend
  + Fix cpukinds on NVIDIA Grace to report identical cores even if they
    actually have very small frequency differences.
    Thanks to John C. Linford for the report.
  + Add CXLDevice attributes to CXL DAX objects and NUMA nodes to show
    which PCI device implements which window.
  + Ignore buggy memory-side caches and memory attributes when fake NUMA
    emulation is enabled on the Linux kernel command-line.
  + Add more info attributes in MemoryModule Misc objects,